<?php declare(strict_types=1);
namespace Kepawni\Twilted;

interface IdentifiableEventSourcedEntity extends EventSourcedEntity, EntityReference
{
}
